[package]
name = "unpluggy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio = {version = "1.37.0", features = ["full"]}
tungstenite = "0.21.0"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
serde_json = "1.0"
async-trait = "0.1.79"